--- a/dog_visual_identification.ipynb
+++ b/dog_visual_identification.ipynb
@@ -6,7 +6,7 @@
       "name": "dog-visual-identification.ipynb",
       "provenance": [],
       "mount_file_id": "1ct5AG51BQQpyzaQ3NGHDDYWgmWPaC9yc",
-      "authorship_tag": "ABX9TyNzJ7H6y3gLW3KioEAQ2+qP",
+      "authorship_tag": "ABX9TyO336X+mBYqeef27wfbferx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,12 +74,46 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Getting workspace ready"
+      ],
+      "metadata": {
+        "id": "Nh9Rumqv0tld"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import TensorFlow into Colab\n",
+        "import tensorflow as tf\n",
+        "print(\"TF version:\", tf.__version__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6VO33dEi0JYC",
+        "outputId": "b0c65ced-b0e8-41a7-98e7-7f29b47df1cd"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "TF version: 2.8.2\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "6VO33dEi0JYC"
+        "id": "zQvJOkum0mV9"
       },
       "execution_count": null,
       "outputs": []
