preprocessing function defined

--- a/dog_visual_identification.ipynb
+++ b/dog_visual_identification.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1tPzPDFuIEwxglokSODvOcnU--UDRGFhp",
-      "authorship_tag": "ABX9TyM1EgY1pwFjX56atoaDRfyP",
+      "authorship_tag": "ABX9TyONCGSCiEqnn8e+3Gsp7ard",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1038,23 +1038,21 @@
     {
       "cell_type": "code",
       "source": [
-        "# Turning image into a tensor\n",
-        "tf.constant(image)"
+        "image[:2]"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "tKiVHNPJ-lp9",
-        "outputId": "c9511b7e-4441-46a1-cfba-30137dcaf0d4"
+        "id": "IElMWtvNAA5M",
+        "outputId": "422e8394-d747-4c32-a12c-42d24e1fdd61"
       },
-      "execution_count": 42,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tf.Tensor: shape=(257, 350, 3), dtype=uint8, numpy=\n",
               "array([[[ 89, 137,  87],\n",
               "        [ 76, 124,  74],\n",
               "        [ 63, 111,  59],\n",
@@ -1069,47 +1067,53 @@
               "        ...,\n",
               "        [ 75, 131,  84],\n",
               "        [ 74, 132,  84],\n",
-              "        [ 74, 131,  86]],\n",
-              "\n",
-              "       [[ 56, 104,  66],\n",
-              "        [ 58, 106,  66],\n",
-              "        [ 64, 112,  72],\n",
-              "        ...,\n",
-              "        [ 71, 127,  82],\n",
-              "        [ 73, 129,  84],\n",
-              "        [ 73, 130,  85]],\n",
-              "\n",
-              "       ...,\n",
-              "\n",
-              "       [[  2,  11,  10],\n",
-              "        [  5,  14,  13],\n",
-              "        [  6,  15,  14],\n",
-              "        ...,\n",
-              "        [120, 113,  67],\n",
-              "        [126, 118,  72],\n",
-              "        [122, 114,  67]],\n",
-              "\n",
-              "       [[  0,   4,   6],\n",
-              "        [  0,   9,   8],\n",
-              "        [  1,  10,   9],\n",
-              "        ...,\n",
-              "        [105,  98,  52],\n",
-              "        [111, 104,  58],\n",
-              "        [111, 103,  56]],\n",
-              "\n",
-              "       [[ 18,  16,  37],\n",
-              "        [ 18,  18,  28],\n",
-              "        [ 17,  20,  11],\n",
-              "        ...,\n",
-              "        [101,  92,  53],\n",
-              "        [ 97,  88,  49],\n",
-              "        [120, 111,  72]]], dtype=uint8)>"
+              "        [ 74, 131,  86]]], dtype=uint8)"
             ]
           },
           "metadata": {},
-          "execution_count": 42
+          "execution_count": 43
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Turning image into a tensor\n",
+        "tensor = tf.constant(image)[:2]"
+      ],
+      "metadata": {
+        "id": "tKiVHNPJ-lp9"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Image size\n",
+        "IMG_SIZE = 224\n",
+        "\n",
+        "# Create a function for preprocessing images\n",
+        "def process_image(image_path, img_size=IMG_SIZE):\n",
+        "  \"\"\"\n",
+        "  Takes an image file path and turns the image into a tensor.\n",
+        "  \"\"\"\n",
+        "  # Read in an image file\n",
+        "  image = tf.io.read_file(image_path)\n",
+        "  # Turn into tensor\n",
+        "  image = tf.image.decode_jpeg(tensor, channels=3)\n",
+        "  # Normalize image (from 0-255 to 0-1)\n",
+        "  image = tf.image.convert_image_dtype(image, tf.float32)\n",
+        "  # Resize (224, 224)\n",
+        "  image = tf.image.resize(image, size=[img_size, img_size])\n",
+        "\n",
+        "  return image"
+      ],
+      "metadata": {
+        "id": "7Sw8BzW--_jb"
+      },
+      "execution_count": 50,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1117,7 +1121,7 @@
         ""
       ],
       "metadata": {
-        "id": "7Sw8BzW--_jb"
+        "id": "YRGiBjeABkWv"
       },
       "execution_count": null,
       "outputs": []
